tests/compile-fail/tracked_method_on_untracked_impl.stderr
error: #[salsa::tracked] must also be applied to the impl block for tracked methods
 --> tests/compile-fail/tracked_method_on_untracked_impl.rs:8:41
  |
8 |     fn tracked_method_on_untracked_impl(self, db: &dyn Db) -> u32 {
  |                                         ^^^^
